fix thumbnail video misaligned on small screen

--- a/styles/components.css
+++ b/styles/components.css
@@ -289,6 +289,7 @@
 .card-video {
   display: flex;
   align-items: center;
+  justify-content: center;
   position: absolute;
   top: 0;
   left: 0;
@@ -316,8 +317,7 @@
 }
 
 .card-art {
-  max-width: 100%;
-  max-height: 100%;
+  /*  */
 }
 
 .card-path {
