--- a/styles/dom.css
+++ b/styles/dom.css
@@ -102,8 +102,10 @@ hr {
 }
 
 img,
+svg,
 video {
   max-width: 100%;
+  max-height: 100%;
 }
 
 figure {
